-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.3.0 Alpha
-
None
Observed in Qt Creator.
The crash comes in from the Qt Creator async run feature and from AutoTest plugin.
It comes from a pool->start() call, and is triggered when an expired job-thread is restarted, causing a QThread::start() from a non-owning thread.
Also in QThreadPool, it is noticed QThreadPoolPrivate::startThread() is also doing similar access that could be racy or crashy.
- relates to
-
QTBUG-96718 Crash in inBindingWrapper() (Creator built against Qt 6.2 build)
-
- Closed
-
-
QTBUG-102403 QObject::objectName() leads to heap-use-after-free in tst_qquickanimations::cleanupWhenRenderThreadStops()
-
- Closed
-
| For Gerrit Dashboard: QTBUG-99775 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 389559,8 | Allow reading QObject::objectName from other threads again | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 389787,5 | Read QThreadPool::objectName thread-safe | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 389963,2 | Allow reading QObject::objectName from other threads again | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 389964,2 | Allow reading QObject::objectName from other threads again | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 389965,2 | Read QThreadPool::objectName thread-safe | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 389966,2 | Read QThreadPool::objectName thread-safe | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |